MND-176 fixed height for wrap on mob screen

--- a/src/assets/styles/_media-home.scss
+++ b/src/assets/styles/_media-home.scss
@@ -524,6 +524,7 @@
     .clients {
         padding: 80px 0;
         &_wrap {
+            height: 485px;
             &-icons {
                 &_row {
                     a {
